--- a/index.html
+++ b/index.html
@@ -7,7 +7,88 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>REPLACE THIS WITH A TABLE TITLE</h1>
-    <div class="table-container">REPLACE THIS WITH YOUR GENERATED TABLE</div>
+    </h1>Setlist for our Next Show</h1>
+    <div class="table-container">
+      <style type="text/css">
+        .tg  {border-collapse:collapse;border-spacing:0;}
+        .tg td{border-color:white;border-style:solid;border-width:1px;font-family:monospace;font-size:14px;
+          overflow:hidden;padding:10px 5px;word-break:normal;}
+        .tg th{border-color:white;border-style:solid;border-width:1px;font-family:monospace;font-size:14px;
+          font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+        .tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
+        </style>
+        <table class="tg"><thead>
+          <tr>
+            <th>Song Rating</th>
+            <th>Song Name</th>
+            <th>Artist(s)</th>
+            <th>Date Released</th>
+            <th>Country of Origin & Style of Music</th>
+          </tr></thead>
+        <tbody>
+          <tr>
+            <td>7</td>
+            <td>Juno</td>
+            <td>Sabrina Carpenter</td>
+            <td>August 23, 2024</td>
+            <td>United States / Pop</td>
+          </tr>
+          <tr>
+            <td>8</td>
+            <td>MIA</td>
+            <td>Bad Bunny feat. Drake</td>
+            <td>October 11, 2018</td>
+            <td>Puerto Rico / Reggaeton</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>Just Wanna Rock</td>
+            <td>Lil Uzi Vert</td>
+            <td>October 17, 2022</td>
+            <td>United States / Rap</td>
+          </tr>
+          <tr>
+            <td>9</td>
+            <td>Headlines</td>
+            <td>Drake</td>
+            <td>August 9, 2011</td>
+            <td>Canada / Rap </td>
+          </tr>
+          <tr>
+            <td>10</td>
+            <td>Super Bass</td>
+            <td>Nicki Minaj</td>
+            <td>May 13, 2011</td>
+            <td>United States / Pop-Rap</td>
+          </tr>
+          <tr>
+            <td>10</td>
+            <td>Down</td>
+            <td>Jay Sean, Lil Wayne</td>
+            <td>May 31, 2009</td>
+            <td>United Kingdom / Pop</td>
+          </tr>
+          <tr>
+            <td>7</td>
+            <td>Desenfocao</td>
+            <td>Rauw Alejandro</td>
+            <td>June 25, 2021</td>
+            <td>Puerto Rico / Synthpop</td>
+          </tr>
+          <tr>
+            <td>6</td>
+            <td>The Color Violet</td>
+            <td>Tory Lanez</td>
+            <td>December 10, 2021</td>
+            <td>Canada / Synthpop</td>
+          </tr>
+          <tr>
+            <td>8</td>
+            <td>Slide</td>
+            <td>Calvin Harris feat. Frank Ocean & Migos</td>
+            <td>February 27, 2017</td>
+            <td>United Kingdom / Dance-Pop, Synth Funk</td>
+          </tr>
+        </tbody></table></div>
   </body>
 </html>
