Differentiating top row and adding comments

--- a/index.html
+++ b/index.html
@@ -6,20 +6,23 @@
     <title>Table</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+  <p>DJ Ivana is hosting a listening party on November 15th, 2024 in Bridgewater! The following songs will be on the setlist that night. Information
+    on the songs and artists are provided below. Hope to see you there!
+  </p>
   <body>
     </h1>Setlist for our Next Show</h1>
     <div class="table-container">
       <style type="text/css">
         .tg  {border-collapse:collapse;border-spacing:0;}
-        .tg td{border-color:white;border-style:solid;border-width:1px;font-family:monospace;font-size:14px;
+        .tg td{border-color:white;border-style:solid;border-width:2px;font-family:monospace;font-size:14px;
           overflow:hidden;padding:10px 5px;word-break:normal;}
-        .tg th{border-color:white;border-style:solid;border-width:1px;font-family:monospace;font-size:14px;
+        .tg th{border-color:white;border-style:solid;border-width:4px;font-family:monospace;font-size:20px;
           font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
         .tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
         </style>
         <table class="tg"><thead>
           <tr>
-            <th>Song Rating</th>
+            <th>Song Rating (1-10) </th>
             <th>Song Name</th>
             <th>Artist(s)</th>
             <th>Date Released</th>
@@ -27,63 +30,63 @@
           </tr></thead>
         <tbody>
           <tr>
-            <td>7</td>
+            <td>7<br>New and trending song on the charts at the moment. Great song to start the night off!</td>
             <td>Juno</td>
             <td>Sabrina Carpenter</td>
             <td>August 23, 2024</td>
             <td>United States / Pop</td>
           </tr>
           <tr>
-            <td>8</td>
+            <td>8<br>Upbeat song that will want to get you moving!</td>
             <td>MIA</td>
             <td>Bad Bunny feat. Drake</td>
             <td>October 11, 2018</td>
             <td>Puerto Rico / Reggaeton</td>
           </tr>
           <tr>
-            <td>5</td>
+            <td>7<br>I'm sure you've heard this song hundreds of times. Still, it never fails to bring life to the party.</td>
             <td>Just Wanna Rock</td>
             <td>Lil Uzi Vert</td>
             <td>October 17, 2022</td>
             <td>United States / Rap</td>
           </tr>
           <tr>
-            <td>9</td>
+            <td>9<br>A good throwback!</td>
             <td>Headlines</td>
             <td>Drake</td>
             <td>August 9, 2011</td>
             <td>Canada / Rap </td>
           </tr>
           <tr>
-            <td>10</td>
+            <td>10<br>One of Minaj's classics. Everyone knows the words. Energy is high.</td>
             <td>Super Bass</td>
             <td>Nicki Minaj</td>
             <td>May 13, 2011</td>
             <td>United States / Pop-Rap</td>
           </tr>
           <tr>
-            <td>10</td>
+            <td>10<br>Another good throwback!</td>
             <td>Down</td>
             <td>Jay Sean, Lil Wayne</td>
             <td>May 31, 2009</td>
             <td>United Kingdom / Pop</td>
           </tr>
           <tr>
-            <td>7</td>
+            <td>7<br>Language switch up! Rauw Alejandro has the best beats to get you grooving!</td>
             <td>Desenfocao</td>
             <td>Rauw Alejandro</td>
             <td>June 25, 2021</td>
             <td>Puerto Rico / Synthpop</td>
           </tr>
           <tr>
-            <td>6</td>
+            <td>6<br>A hit from one of his best albums.</td>
             <td>The Color Violet</td>
             <td>Tory Lanez</td>
             <td>December 10, 2021</td>
             <td>Canada / Synthpop</td>
           </tr>
           <tr>
-            <td>8</td>
+            <td>9<br>To end things off, we got a hit from Calvin Harris. Personally, I think this is one of his tracks.</td>
             <td>Slide</td>
             <td>Calvin Harris feat. Frank Ocean & Migos</td>
             <td>February 27, 2017</td>
@@ -91,4 +94,6 @@
           </tr>
         </tbody></table></div>
   </body>
+
+  <footer>©2024 - Ivana San Pedro</footer>
 </html>
