Adding an image

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Table</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <p>DJ Ivana is hosting a listening party on November 15th, 2024 in Bridgewater! The following songs will be on the setlist that night. Information
-    on the songs and artists are provided below. Hope to see you there!
+  <p>DJ Ivana is hosting a listening party online November 15th, 2024! The following songs will be on the setlist. Information
+    on the songs and artists are provided below. Hope you tune in!
   </p>
   <body>
-    </h1>Setlist for our Next Show</h1>
+
+    </h1>Setlist</h1>
     <div class="table-container">
       <style type="text/css">
         .tg  {border-collapse:collapse;border-spacing:0;}
@@ -30,21 +31,21 @@
           </tr></thead>
         <tbody>
           <tr>
-            <td>7<br>New and trending song on the charts at the moment. Great song to start the night off!</td>
+            <td>7<br>New and trending song on the charts at the moment. Great song to start off with!</td>
             <td>Juno</td>
             <td>Sabrina Carpenter</td>
             <td>August 23, 2024</td>
             <td>United States / Pop</td>
           </tr>
           <tr>
-            <td>8<br>Upbeat song that will want to get you moving!</td>
+            <td>8<br>Upbeat song that will get you in a good mood!</td>
             <td>MIA</td>
             <td>Bad Bunny feat. Drake</td>
             <td>October 11, 2018</td>
             <td>Puerto Rico / Reggaeton</td>
           </tr>
           <tr>
-            <td>7<br>I'm sure you've heard this song hundreds of times. Still, it never fails to bring life to the party.</td>
+            <td>7<br>I'm sure you've heard this song hundreds of times. Still, it never fails to bring high energy.</td>
             <td>Just Wanna Rock</td>
             <td>Lil Uzi Vert</td>
             <td>October 17, 2022</td>
@@ -93,7 +94,9 @@
             <td>United Kingdom / Dance-Pop, Synth Funk</td>
           </tr>
         </tbody></table></div>
-  </body>
+        <section id="info">
+          <h3>Information above is found on rateyourmusic.com and wikipedia.</h3>
+        </section>
 
   <footer>©2024 - Ivana San Pedro</footer>
 </html>
