Added Image and header, final setup for site

--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
     <title>Table</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <p>DJ Ivana is hosting a listening party online November 15th, 2024! The following songs will be on the setlist. Information
-    on the songs and artists are provided below. Hope you tune in!
-  </p>
   <body>
+    <section id="name">
+      <h1>DJ Ivana</h1>
+    </section>
+
+    <section id="image">
+      <img src="img/Dj_640w.jpg" alt="DJ">
+    </section>
+
+    <section id="intro">
+      <p>DJ Ivana is hosting a listening party online November 15th, 2024! The following songs will be on the setlist. Information
+      on the songs and artists are provided below. Hope you tune in!
+      </p>
+    </section>
 
     </h1>Setlist</h1>
     <div class="table-container">
@@ -95,7 +105,7 @@
           </tr>
         </tbody></table></div>
         <section id="info">
-          <h3>Information above is found on rateyourmusic.com and wikipedia.</h3>
+          <h3>Information above is found on rateyourmusic.com and Wikipedia.</h3>
         </section>
 
   <footer>©2024 - Ivana San Pedro</footer>
