Responsive and adding citations

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Table</title>
+    <title>Ivana San Pedro - Table</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -13,6 +13,7 @@
 
     <section id="image">
       <img src="img/Dj_640w.jpg" alt="DJ">
+      <caption><br>Image from unpslash.com</caption>
     </section>
 
     <section id="intro">
